# VerusCAD

./: .gitignore  Cargo.toml  README.md
crates/vcad-geometry/: Cargo.toml  README.md
crates/vcad-geometry/docs/: phase3-predicates.md  phase5-upstream-lemmas.md  phase5-upstream-lemmas.todo  verification-todo.md
crates/vcad-geometry/src/: collinearity_coplanarity.rs  convex_polygon.rs  lib.rs  orientation_predicates.rs  phase5_upstream_lemmas.rs  runtime_collinearity_coplanarity_refinement.rs  runtime_convex_polygon_refinement.rs  runtime_orientation_predicates_refinement.rs  runtime_segment_intersection_refinement.rs  runtime_segment_polygon_overlap_refinement.rs  runtime_sidedness_refinement.rs  segment_intersection.rs  segment_polygon_overlap.rs  segment_triangle_intersection.rs  sidedness.rs
crates/vcad-math/: Cargo.toml  README.md
crates/vcad-math/docs/: verification-todo.md
crates/vcad-math/src/: lib.rs  orientation.rs  orientation3.rs  point2.rs  point3.rs  point4.rs  quaternion.rs  quaternion_assoc_cases.rs  runtime_bigint_witness.rs  runtime_orientation.rs  runtime_orientation3.rs  runtime_orientation3_refinement.rs  runtime_orientation_refinement.rs  runtime_point2.rs  runtime_point2_refinement.rs  runtime_point3.rs  runtime_point3_refinement.rs  runtime_point4.rs  runtime_point4_refinement.rs  runtime_quaternion.rs  runtime_quaternion_refinement.rs  runtime_scalar.rs  runtime_scalar_refinement.rs  runtime_vec2.rs  runtime_vec2_refinement.rs  runtime_vec3.rs  runtime_vec3_refinement.rs  runtime_vec4.rs  runtime_vec4_refinement.rs  runtime_wf.rs  scalar.rs  vec2.rs  vec3.rs  vec4.rs
crates/vcad-operators/: Cargo.toml  README.md
crates/vcad-operators/docs/: todo-operators.sh
crates/vcad-operators/src/: lib.rs
crates/vcad-topology/: Cargo.toml  README.md
(+61 files in other folders)
