[package]
name = "vcad-geometry"
version = "0.1.0"
edition = "2021"

[dependencies]
vcad-math = { path = "../vcad-math" }
vstd = { path = "../../../verus/source/vstd" }

[features]
default = []
verus-proofs = []

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
