[package]
name = "vcad-math"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { path = "../../../verus/source/vstd" }
rug = { version = "1.27.0", default-features = false, features = ["integer", "rational"] }

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
